Fix styling so table won't stretch if there are not enough rows to fill the screen and add a more appropriate no data message.

--- a/src/components/stylesheets/DetailsPanel.scss
+++ b/src/components/stylesheets/DetailsPanel.scss
@@ -18,7 +18,6 @@
 .currentTable {
   display: flex;
   flex-direction: column;
-  height: 100%;
 
   > div {
     display: flex;
